app/assets/stylesheets/layout/question/display/_association.css.scss
.l-question-display-association {
  .association-pair-dynamic {
    span {
      display: inline-block;
      position: relative;
      cursor: move;
      padding: $hsu;
      border: 1px solid darken(white, 20%);
      border-radius: $baseBorderRadius;
      background: darken(white, 4%);
    }

    .association-pair-hover {
      color: $linkColor;
      border-color: rgba($linkColor, .75);
      background-color: rgba($linkColor, .1);
    }
  }

  .association-pair-original {
    opacity: .5;
  }

  .feedback {
    ul {
      @include list-unstyled;
      color: rgba(black, .5);
    }

    li { margin-bottom: $hsu; }

    i {
      color: $textColor;
      font-size: 14px;
    }
  }
}

